--- a/classify.ipynb
+++ b/classify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load slide embeddings\n",
     "import pickle\n",
     "\n",
-    "with open(os.path.join(OUTPUT_DIR, \"gigapath_slide_embeds_pool.pkl\"), \"rb\") as f:\n",
+    "with open(\n",
+    "    os.path.join(OUTPUT_DIR, \"gigapath_slide_embeds_pool.pkl\"), \"rb\"\n",
+    ") as f:\n",
     "    embeds = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# instead, just add \"fold\" col to dataframe and groupby to get grouped data\n",
+    "\n",
     "slide_folds = [[] for _ in range(5)]\n",
     "for i, fold in enumerate(folds):\n",
     "    for spec in fold:\n",
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +94,13 @@
     "slide_ids = list(embeds.keys())\n",
     "specimen_ids = [slide_id[:6] for slide_id in slide_ids]\n",
     "embeddings = [embeds[slide_id] for slide_id in slide_ids]\n",
-    "df = pd.DataFrame({\"slide_id\": slide_ids, \"specimen_id\": specimen_ids, \"embedding\": embeddings})\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"slide_id\": slide_ids,\n",
+    "        \"specimen_id\": specimen_ids,\n",
+    "        \"embedding\": embeddings,\n",
+    "    }\n",
+    ")\n",
     "df[\"slide_id\"] = df[\"slide_id\"].astype(\"string\")\n",
     "df[\"specimen_id\"] = df[\"specimen_id\"].astype(\"string\")\n",
     "df[\"embedding\"] = df[\"embedding\"].apply(lambda x: np.array(x.squeeze(0)))"
@@ -98,26 +108,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge slide data dataframe with labels dataframe\n",
     "df = df.merge(\n",
-    "    labels[\n",
-    "        [\"specimenid\", \"bowens1\", \"scc1\", \"bcc1\"]\n",
-    "    ], how=\"right\", left_on=\"specimen_id\", right_on=\"specimenid\",\n",
+    "    labels[[\"specimenid\", \"bowens1\", \"scc1\", \"bcc1\"]],\n",
+    "    how=\"right\",\n",
+    "    left_on=\"specimen_id\",\n",
+    "    right_on=\"specimenid\",\n",
     ")\n",
     "df = df.set_index(\"slide_id\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from enum import IntEnum\n",
+    "\n",
     "\n",
     "class Label(IntEnum):\n",
     "    na = 0\n",
@@ -139,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,76 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5023696682464455\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.58      0.61      0.59       143\n",
-      "           1       0.43      0.39      0.41       141\n",
-      "           2       0.47      0.54      0.51       101\n",
-      "           3       0.56      0.41      0.47        37\n",
-      "\n",
-      "    accuracy                           0.50       422\n",
-      "   macro avg       0.51      0.49      0.49       422\n",
-      "weighted avg       0.50      0.50      0.50       422\n",
-      "\n",
-      "0.5666003976143141\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.56      0.71      0.62       148\n",
-      "           1       0.45      0.46      0.46       155\n",
-      "           2       0.63      0.50      0.56       142\n",
-      "           3       0.86      0.66      0.75        58\n",
-      "\n",
-      "    accuracy                           0.57       503\n",
-      "   macro avg       0.62      0.58      0.60       503\n",
-      "weighted avg       0.58      0.57      0.57       503\n",
-      "\n",
-      "0.4880952380952381\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.59      0.60      0.60       148\n",
-      "           1       0.32      0.38      0.35       114\n",
-      "           2       0.58      0.47      0.52       130\n",
-      "           3       0.41      0.43      0.42        28\n",
-      "\n",
-      "    accuracy                           0.49       420\n",
-      "   macro avg       0.48      0.47      0.47       420\n",
-      "weighted avg       0.50      0.49      0.49       420\n",
-      "\n",
-      "0.5275\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.56      0.65      0.60       127\n",
-      "           1       0.43      0.42      0.42       124\n",
-      "           2       0.52      0.49      0.50       103\n",
-      "           3       0.77      0.59      0.67        46\n",
-      "\n",
-      "    accuracy                           0.53       400\n",
-      "   macro avg       0.57      0.53      0.55       400\n",
-      "weighted avg       0.53      0.53      0.53       400\n",
-      "\n",
-      "0.5246753246753246\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.61      0.62      0.61       140\n",
-      "           1       0.35      0.41      0.38       104\n",
-      "           2       0.58      0.54      0.55        99\n",
-      "           3       0.73      0.45      0.56        42\n",
-      "\n",
-      "    accuracy                           0.52       385\n",
-      "   macro avg       0.57      0.51      0.53       385\n",
-      "weighted avg       0.54      0.52      0.53       385\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.linear_model import LogisticRegression\n",
