--- a/classify.ipynb
+++ b/classify.ipynb
@@ -61,8 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# instead, just add \"fold\" col to dataframe and groupby to get grouped data\n",
-    "\n",
+    "# TODO: add \"fold\" col to dataframe and groupby to get grouped data instead\n",
     "slide_folds = [[] for _ in range(5)]\n",
     "for i, fold in enumerate(folds):\n",
     "    for spec in fold:\n",
@@ -166,32 +165,278 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
-    "\n",
-    "# clf = LogisticRegression(max_iter=500)\n",
-    "clf = XGBClassifier(objective=\"multi:softmax\", num_class=4)\n",
-    "\n",
-    "val_set = np.arange(len(slide_folds) - 1, -1, -1)\n",
-    "for i in range(len(slide_folds)):\n",
-    "    val_fold = slide_folds[val_set[i]]\n",
-    "\n",
-    "    X_val = X.loc[val_fold]\n",
+    "def train_val_split(\n",
+    "    X: pd.DataFrame, y: pd.DataFrame, val_fold_indices: list\n",
+    ") -> tuple:\n",
+    "    X_val = X.loc[val_fold_indices]\n",
     "    X_train = X[X.index.difference(X_val.index)]\n",
-    "    X_val = X_val.to_list()\n",
-    "    X_train = X_train.to_list()\n",
     "\n",
-    "    y_val = y.loc[val_fold]\n",
+    "    y_val = y.loc[val_fold_indices]\n",
     "    y_train = y[y.index.difference(y_val.index)]\n",
     "\n",
-    "    clf.fit(X_train, y_train)\n",
-    "    preds = clf.predict(X_val)\n",
-    "    probs = clf.predict_proba(X_val)\n",
-    "    score = accuracy_score(y_val, preds)\n",
-    "    print(score)\n",
-    "    print(classification_report(y_val, preds))"
+    "    return (\n",
+    "        X_train.to_list(),\n",
+    "        y_train.to_list(),\n",
+    "        X_val.to_list(),\n",
+    "        y_val.to_list(),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_spec_level_probs(slide_indices: list, probs: list):\n",
+    "    combined_probs = {}\n",
+    "    for j, slide_idx in enumerate(slide_indices):\n",
+    "        spec = slide_idx[:6]\n",
+    "        if combined_probs.get(spec) is None:\n",
+    "            combined_probs[spec] = [probs[j]]\n",
+    "        else:\n",
+    "            combined_probs[spec].append(probs[j])\n",
+    "\n",
+    "    for k in combined_probs.keys():\n",
+    "        combined_probs[k] = sum(combined_probs[k]) / len(combined_probs[k])\n",
+    "\n",
+    "    return list(combined_probs.keys()), np.array(list(combined_probs.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import PrecisionRecallDisplay, RocCurveDisplay, auc\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "def plot_eval(\n",
+    "    mean_x: np.ndarray,\n",
+    "    onehot_labels: np.ndarray,\n",
+    "    probs: np.ndarray,\n",
+    "    ax: plt.Axes,\n",
+    "    type: str,\n",
+    "):\n",
+    "    # set eval type specific vars\n",
+    "    if type == \"ROC\":\n",
+    "        curve_display = RocCurveDisplay\n",
+    "        set_initial_interp_value = True\n",
+    "        interp_transform = lambda x: x\n",
+    "        x_attr = \"fpr\"\n",
+    "        y_attr = \"tpr\"\n",
+    "        auc_attr = \"roc_auc\"\n",
+    "    else:\n",
+    "        curve_display = PrecisionRecallDisplay\n",
+    "        set_initial_interp_value = False\n",
+    "        interp_transform = lambda x: np.flip(x)\n",
+    "        x_attr = \"recall\"\n",
+    "        y_attr = \"precision\"\n",
+    "        auc_attr = \"average_precision\"\n",
+    "\n",
+    "    # create the curve\n",
+    "    # TODO: figure out chance level; should be a weighted average over\n",
+    "    #       folds for PRC\n",
+    "    curve = curve_display.from_predictions(\n",
+    "        onehot_labels,\n",
+    "        probs,\n",
+    "        name=f\"{type} fold {i}\",\n",
+    "        plot_chance_level=(i == len(slide_folds) - 1),\n",
+    "        ax=ax,\n",
+    "        alpha=0.3,\n",
+    "        lw=1,\n",
+    "    )\n",
+    "\n",
+    "    # interpolate results using mean_x param to allow for averaging of curves\n",
+    "    interp_y = np.interp(\n",
+    "        mean_x,\n",
+    "        interp_transform(getattr(curve, x_attr)),\n",
+    "        interp_transform(getattr(curve, y_attr)),\n",
+    "    )\n",
+    "    interp_y[0] = 0.0 if set_initial_interp_value else interp_y[0]\n",
+    "\n",
+    "    return interp_y, getattr(curve, auc_attr)\n",
+    "\n",
+    "\n",
+    "def create_mean_curve(\n",
+    "    mean_x: np.ndarray,\n",
+    "    cv_y: np.ndarray,\n",
+    "    aucs: np.ndarray,\n",
+    "    ax: plt.Axes,\n",
+    "    type: str,\n",
+    "    class_name: str,\n",
+    "):\n",
+    "    if type == \"ROC\":\n",
+    "        set_final_mean_value = True\n",
+    "        ax.set(\n",
+    "            xlabel=\"False Positive Rate\",\n",
+    "            ylabel=\"True Positive Rate\",\n",
+    "            title=f\"Mean ROC curve with variability for {class_name}\",\n",
+    "        )\n",
+    "    else:\n",
+    "        set_final_mean_value = False\n",
+    "        ax.set(\n",
+    "            xlabel=\"Recall\",\n",
+    "            ylabel=\"Precision\",\n",
+    "            title=f\"Mean precision-recall curve with variability for {class_name}\",\n",
+    "        )\n",
+    "\n",
+    "    # prep plot data\n",
+    "    mean_y = np.mean(cv_y, axis=0)\n",
+    "    mean_y[-1] = 1.0 if set_final_mean_value else mean_y[-1]\n",
+    "    mean_auc = auc(mean_x, mean_y)\n",
+    "    std_auc = np.std(aucs)\n",
+    "    auc_label = \"AUC\" if type == \"ROC\" else \"AP\"\n",
+    "\n",
+    "    # plot the mean line\n",
+    "    ax.plot(\n",
+    "        mean_x,\n",
+    "        mean_y,\n",
+    "        color=\"b\",\n",
+    "        label=r\"Mean %s (%s = %0.2f $\\pm$ %0.2f)\"\n",
+    "        % (type, auc_label, mean_auc, std_auc),\n",
+    "        lw=2,\n",
+    "        alpha=0.8,\n",
+    "    )\n",
+    "\n",
+    "    # plot the standard deviation bands\n",
+    "    std_y = np.std(cv_y, axis=0)\n",
+    "    y_upper = np.minimum(mean_y + std_y, 1)\n",
+    "    y_lower = np.maximum(mean_y - std_y, 0)\n",
+    "    ax.fill_between(\n",
+    "        mean_x,\n",
+    "        y_lower,\n",
+    "        y_upper,\n",
+    "        color=\"grey\",\n",
+    "        alpha=0.2,\n",
+    "        label=r\"$\\pm$ 1 std. dev.\",\n",
+    "    )\n",
+    "\n",
+    "    ax.legend(loc=\"lower right\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crossval(clf, folds: list, y_onehot: pd.DataFrame):\n",
+    "    # dictionaries to keep eval curve results for each label\n",
+    "    tprs = {label: [] for label in Label._member_names_}\n",
+    "    aucs = {label: [] for label in Label._member_names_}\n",
+    "    precisions = {label: [] for label in Label._member_names_}\n",
+    "    aps = {label: [] for label in Label._member_names_}\n",
+    "\n",
+    "    # mean x vals and axes for curves\n",
+    "    mean_fpr = np.linspace(0, 1, 100)\n",
+    "    mean_recall = np.linspace(0, 1, 100)\n",
+    "    roc_fig, roc_axs = plt.subplots(2, 2, figsize=(12, 12))\n",
+    "    prc_fig, prc_axs = plt.subplots(2, 2, figsize=(12, 12))\n",
+    "\n",
+    "    for val_fold_indices in folds:\n",
+    "        # fit the classifier on the train data and extract probs\n",
+    "        X_train, y_train, X_val, _ = train_val_split(X, y, val_fold_indices)\n",
+    "        clf.fit(X_train, y_train)\n",
+    "        probs = clf.predict_proba(X_val)\n",
+    "\n",
+    "        # probs are on slide-level - need specimen level\n",
+    "        _, probs = get_spec_level_probs(val_fold_indices, probs)\n",
+    "\n",
+    "        # get onehot labels for val set\n",
+    "        y_onehot_val = y_onehot.loc[val_fold_indices].drop_duplicates(\n",
+    "            subset=[\"specimen_id\"]\n",
+    "        )\n",
+    "\n",
+    "        # for each predicted class, plot the current classifier's eval\n",
+    "        # and retain relevant data in dicts\n",
+    "        for j, class_of_interest in enumerate(Label._member_names_):\n",
+    "            interp_tpr, roc_auc = plot_eval(\n",
+    "                mean_fpr,\n",
+    "                y_onehot_val[f\"{class_of_interest}\"],\n",
+    "                probs[:, Label[class_of_interest].value],\n",
+    "                roc_axs[j // 2][j % 2],\n",
+    "                \"ROC\",\n",
+    "            )\n",
+    "            tprs[class_of_interest].append(interp_tpr)\n",
+    "            aucs[class_of_interest].append(roc_auc)\n",
+    "\n",
+    "            interp_precision, average_precision = plot_eval(\n",
+    "                mean_recall,\n",
+    "                y_onehot_val[f\"{class_of_interest}\"],\n",
+    "                probs[:, Label[class_of_interest].value],\n",
+    "                prc_axs[j // 2][j % 2],\n",
+    "                \"PRC\",\n",
+    "            )\n",
+    "            precisions[class_of_interest].append(interp_precision)\n",
+    "            aps[class_of_interest].append(average_precision)\n",
+    "\n",
+    "    # plot the mean eval curves\n",
+    "    for j, class_of_interest in enumerate(Label._member_names_):\n",
+    "        create_mean_curve(\n",
+    "            mean_fpr,\n",
+    "            tprs[class_of_interest],\n",
+    "            aucs[class_of_interest],\n",
+    "            roc_axs[j // 2][j % 2],\n",
+    "            \"ROC\",\n",
+    "            class_of_interest,\n",
+    "        )\n",
+    "        create_mean_curve(\n",
+    "            mean_recall,\n",
+    "            precisions[class_of_interest],\n",
+    "            aps[class_of_interest],\n",
+    "            prc_axs[j // 2][j % 2],\n",
+    "            \"PRC\",\n",
+    "            class_of_interest,\n",
+    "        )\n",
+    "\n",
+    "    roc_fig.show()\n",
+    "    prc_fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_onehot = df[[\"bowens1\", \"scc1\", \"bcc1\", \"specimen_id\"]]\n",
+    "y_onehot[\"na\"] = 1 - y_onehot.loc[:, [\"bowens1\", \"scc1\", \"bcc1\"]].sum(axis=1)\n",
+    "y_onehot = y_onehot.rename(\n",
+    "    columns={\n",
+    "        \"bowens1\": \"bowens\",\n",
+    "        \"bcc1\": \"bcc\",\n",
+    "        \"scc1\": \"scc\",\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "clf = XGBClassifier(objective=\"multi:softmax\", num_class=4)\n",
+    "crossval(clf, slide_folds, y_onehot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "clf = LogisticRegression(max_iter=500, solver=\"saga\")\n",
+    "crossval(clf, slide_folds, y_onehot)"
    ]
   }
  ],
