Implement dataloading function; implement umap clustering

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -77,7 +77,9 @@
     "# load data labels\n",
     "import pandas as pd\n",
     "\n",
-    "labels = pd.read_csv(os.path.join(DATA_DIR, \"labels/labels.csv\")).rename(columns={\"bowens1\": \"bowens\", \"scc1\": \"scc\", \"bcc1\": \"bcc\"})\n",
+    "labels = pd.read_csv(os.path.join(DATA_DIR, \"labels/labels.csv\")).rename(\n",
+    "    columns={\"bowens1\": \"bowens\", \"scc1\": \"scc\", \"bcc1\": \"bcc\"}\n",
+    ")\n",
     "labels[\"specimenid\"] = labels[\"specimenid\"].astype(\"string\")"
    ]
   },
@@ -154,9 +156,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specimen_df = df.reset_index()[[\"specimen_id\", \"bowens\", \"scc\", \"bcc\"]].drop_duplicates(subset=[\"specimen_id\"])\n",
+    "specimen_df = df.reset_index()[\n",
+    "    [\"specimen_id\", \"bowens\", \"scc\", \"bcc\"]\n",
+    "].drop_duplicates(subset=[\"specimen_id\"])\n",
     "\n",
-    "spec_freqs = {label: specimen_df[label].value_counts(normalize=True).iloc[1] for label in Label._member_names_ if label != \"na\"}\n",
+    "spec_freqs = {\n",
+    "    label: specimen_df[label].value_counts(normalize=True).iloc[1]\n",
+    "    for label in Label._member_names_\n",
+    "    if label != \"na\"\n",
+    "}\n",
     "spec_freqs[\"na\"] = 1 - sum(spec_freqs.values())"
    ]
   },
@@ -418,7 +426,7 @@
     "            linestyle=\"--\",\n",
     "            label=r\"Chance level (AP = %0.2f)\"\n",
     "            % (spec_freqs[class_of_interest]),\n",
-    "            color=\"black\"\n",
+    "            color=\"black\",\n",
     "        )\n",
     "\n",
     "        # reorder legend\n",
