Add UNI embedding script and pooling outputs

--- a/notebooks/Classify_Slides.ipynb
+++ b/notebooks/Classify_Slides.ipynb
@@ -25,7 +25,7 @@
     "from utils.load_data import load_data\n",
     "\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
-    "embedding_path = os.path.join(OUTPUT_DIR, \"gigapath_slide_embeds_cls.pkl\")\n",
+    "embedding_path = os.path.join(OUTPUT_DIR, \"uni/uni_pooled_slide_embeds.pkl\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
     "df = load_data(\n",
@@ -89,8 +89,11 @@
     "\n",
     "\n",
     "def train_val_split(\n",
-    "    X: pd.DataFrame, y: pd.DataFrame, val_fold_indices: List[str]\n",
-    ") -> Tuple[List[np.ndarray], List[int], List[np.ndarray], List[int]]:\n",
+    "    X: pd.DataFrame,\n",
+    "    y: pd.DataFrame,\n",
+    "    val_fold_indices: List[str],\n",
+    "    z_norm: bool = False,\n",
+    ") -> Tuple[np.ndarray, np.ndarray, np.ndarray, np.ndarray]:\n",
     "    \"\"\"\n",
     "    Construct training and validation sets from the provided data using\n",
     "    the given indices for the validation set.\n",
@@ -106,25 +109,38 @@
     "    val_fold_indices : List[str]\n",
     "        The indices of samples to include in the validation set\n",
     "\n",
+    "    z_norm : bool\n",
+    "        Whether to use z-score normalization / standardization\n",
+    "\n",
     "    Returns\n",
     "    -------\n",
-    "    Tuple[List[np.ndarray], List[int], List[np.ndarray], List[int]]\n",
+    "    Tuple[np.ndarray, np.ndarray, np.ndarray, np.ndarray]\n",
     "        X_train, y_train, X_val, y_val\n",
     "    \"\"\"\n",
-    "    X_val = X.loc[val_fold_indices]\n",
-    "    X_train = X[X.index.difference(X_val.index)]\n",
+    "    X_split = {}\n",
+    "    y_split = {}\n",
+    "    X_split[\"val\"] = X.loc[val_fold_indices]\n",
+    "    y_split[\"val\"] = y.loc[val_fold_indices]\n",
+    "    X_split[\"train\"] = X[X.index.difference(X_split[\"val\"].index)]\n",
+    "    y_split[\"train\"] = y[y.index.difference(y_split[\"val\"].index)]\n",
+    "    assert X_split[\"val\"].index == y_split[\"val\"].index\n",
+    "    assert X_split[\"train\"].index == y_split[\"train\"].index\n",
     "\n",
-    "    y_val = y.loc[val_fold_indices]\n",
-    "    y_train = y[y.index.difference(y_val.index)]\n",
+    "    for split, embs in X_split.items():\n",
+    "        embs = np.stack(embs.to_list())\n",
+    "        if z_norm:\n",
+    "            embs = (embs - embs.mean(axis=1, keepdims=True)) / embs.std(\n",
+    "                axis=1, keepdims=True\n",
+    "            )\n",
     "\n",
-    "    assert X_train.index == y_train.index\n",
-    "    assert X_val.index == y_val.index\n",
+    "        X_split[split] = embs\n",
+    "        y_split[split] = y_split[split].to_numpy()\n",
     "\n",
     "    return (\n",
-    "        X_train.to_list(),\n",
-    "        y_train.to_list(),\n",
-    "        X_val.to_list(),\n",
-    "        y_val.to_list(),\n",
+    "        X_split[\"train\"],\n",
+    "        y_split[\"train\"],\n",
+    "        X_split[\"val\"],\n",
+    "        y_split[\"val\"],\n",
     "    )"
    ]
   },
@@ -300,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crossval(clf, folds: list, y_onehot: pd.DataFrame):\n",
+    "def crossval(clf, folds: list, y_onehot: pd.DataFrame, exp_name: str):\n",
     "    # dictionaries to keep eval curve results for each label\n",
     "    tprs = {label: [] for label in Label._member_names_}\n",
     "    aucs = {label: [] for label in Label._member_names_}\n",
@@ -315,7 +331,9 @@
     "\n",
     "    for i, val_fold_indices in enumerate(folds):\n",
     "        # fit the classifier on the train data and extract probs\n",
-    "        X_train, y_train, X_val, _ = train_val_split(X, y, val_fold_indices)\n",
+    "        X_train, y_train, X_val, _ = train_val_split(\n",
+    "            X, y, val_fold_indices, True\n",
+    "        )\n",
     "        clf.fit(X_train, y_train)\n",
     "        probs = clf.predict_proba(X_val)\n",
     "\n",
@@ -391,7 +409,9 @@
     "        prc_ax.legend(handles=handles, labels=labs, loc=\"lower right\")\n",
     "\n",
     "    roc_fig.show()\n",
-    "    prc_fig.show()"
+    "    roc_fig.savefig(f\"outputs/{exp_name}-roc.png\")\n",
+    "    prc_fig.show()\n",
+    "    prc_fig.savefig(f\"outputs/{exp_name}-prc.png\")"
    ]
   },
   {
@@ -412,7 +432,7 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "clf = XGBClassifier(objective=\"multi:softmax\", num_class=4)\n",
-    "crossval(clf, slide_folds, y_onehot)"
+    "crossval(clf, slide_folds, y_onehot, \"uni/global_pooling/uni-xgb\")"
    ]
   },
   {
@@ -423,8 +443,8 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "clf = LogisticRegression(max_iter=500, solver=\"saga\")\n",
-    "crossval(clf, slide_folds, y_onehot)"
+    "clf = LogisticRegression(max_iter=1000, solver=\"saga\")\n",
+    "crossval(clf, slide_folds, y_onehot, \"uni/global_pooling/uni-lr\")"
    ]
   },
   {
@@ -437,8 +457,15 @@
     "\n",
     "clf = SGDClassifier(loss=\"log_loss\")\n",
     "\n",
-    "crossval(clf, slide_folds, y_onehot)"
+    "crossval(clf, slide_folds, y_onehot, \"uni/global_pooling/uni-sgd_lr\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
