Reorg for ease of reuse

--- a/notebooks/Classify_Slides.ipynb
+++ b/notebooks/Classify_Slides.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.Label import Label\n",
+    "from data_models.Label import Label\n",
     "\n",
     "specimen_df = df.reset_index()[\n",
     "    [\"specimen_id\", \"bowens\", \"scc\", \"bcc\", \"na\"]\n",
