--- a/notebooks/Data_Characteristics.ipynb
+++ b/notebooks/Data_Characteristics.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.Label import Label\n",
+    "from data_models.Label import Label\n",
     "\n",
     "by_fold_and_pat = data.groupby([\"fold\", \"patient_id\"]).agg(\n",
     "    bowens=(\n",
