Refactor notebooks to use util funcs

--- a/notebooks/Aggregate_And_Classify.ipynb
+++ b/notebooks/Aggregate_And_Classify.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -23,14 +33,21 @@
    "outputs": [],
    "source": [
     "# load the labels data with folds\n",
+    "import numpy as np\n",
+    "\n",
     "from utils.load_data import load_data\n",
+    "from data_models.Label import Label\n",
     "\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
     "df = load_data(label_path=label_path, fold_path=fold_path)\n",
     "df = df.set_index(\"specimen_id\")\n",
-    "labels_onehot = df[[\"bowens\", \"scc\", \"bcc\", \"na\"]]\n",
+    "labels_onehot = df[Label._member_names_].to_dict(orient=\"split\", index=True)\n",
+    "labels_onehot = {\n",
+    "    k: np.array(labels_onehot[\"data\"][i])\n",
+    "    for i, k in enumerate(labels_onehot[\"index\"])\n",
+    "}\n",
     "labels_dict = {row.name: int(row[\"label\"]) for _, row in df.iterrows()}"
    ]
   },
@@ -41,13 +58,55 @@
    "outputs": [],
    "source": [
     "# get the absolute path for each slide's set of tile embeddings\n",
-    "tile_embed_dir = \"/opt/gpudata/skin-cancer/outputs/uni/tile_embeddings\"\n",
+    "# tile_embed_dir = \"/opt/gpudata/skin-cancer/outputs/prism/tile_embeddings\"\n",
+    "# fnames = os.listdir(tile_embed_dir)\n",
+    "# tile_embed_paths = [\n",
+    "#     os.path.join(tile_embed_dir, fname)\n",
+    "#     for fname in fnames\n",
+    "#     if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
+    "# ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from utils.tile_embed_postproc import postproc_pkl\n",
+    "\n",
+    "# postproc_pkl(tile_embed_dir, tile_embed_dir + \"_sorted\", 256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_embed_dir = (\n",
+    "    \"/opt/gpudata/skin-cancer/outputs/prism/tile_embeddings_sorted\"\n",
+    ")\n",
     "fnames = os.listdir(tile_embed_dir)\n",
     "tile_embed_paths = [\n",
     "    os.path.join(tile_embed_dir, fname)\n",
     "    for fname in fnames\n",
     "    if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pickle\n",
+    "\n",
+    "# with open(tile_embed_paths[0], \"rb\") as f:\n",
+    "#     data = pickle.load(f)\n",
+    "\n",
+    "# data"
    ]
   },
   {
@@ -84,7 +143,7 @@
    "source": [
     "from data_models.Label import Label\n",
     "\n",
-    "spec_freqs = {\n",
+    "class_freqs = {\n",
     "    label: df[label].value_counts(normalize=True).iloc[1]\n",
     "    for label in Label._member_names_\n",
     "}"
@@ -109,107 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import nn\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "\n",
-    "def train_epoch(\n",
-    "    model: nn.Module,\n",
-    "    dataloader: DataLoader,\n",
-    "    optimizer: torch.optim,\n",
-    "    loss_fn: nn.Module,\n",
-    ") -> float:\n",
-    "    agg_loss = 0.0\n",
-    "\n",
-    "    model.train()\n",
-    "    for i, sample in enumerate(dataloader):\n",
-    "        embeds = sample[\"tile_embeds\"]\n",
-    "        label = sample[\"label\"]\n",
-    "        if len(embeds.shape) < 3:\n",
-    "            embeds = embeds.unsqueeze(0)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        output = model(embeds.to(device), sample[\"coords\"].to(device))\n",
-    "        if len(output.shape) < 2:\n",
-    "            output = output.unsqueeze(0)\n",
-    "        loss = loss_fn(output, label.to(device))\n",
-    "        agg_loss += loss.item()\n",
-    "        loss.backward()\n",
-    "\n",
-    "        optimizer.step()\n",
-    "    return agg_loss / (i + 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List, Tuple\n",
-    "\n",
-    "\n",
-    "def val_epoch(\n",
-    "    model: nn.Module, dataloader: DataLoader, loss_fn: nn.Module\n",
-    ") -> Tuple[float, List[float]]:\n",
-    "    agg_loss = 0.0\n",
-    "    outputs = []\n",
-    "    labels = []\n",
-    "    ids = []\n",
-    "\n",
-    "    model.eval()\n",
-    "    with torch.no_grad():\n",
-    "        for i, sample in enumerate(dataloader):\n",
-    "            embeds = sample[\"tile_embeds\"]\n",
-    "            label = sample[\"label\"]\n",
-    "            if len(embeds.shape) < 3:\n",
-    "                embeds = embeds.unsqueeze(0)\n",
-    "\n",
-    "            output = model(embeds.to(device), sample[\"coords\"].to(device))\n",
-    "            if len(output.shape) < 2:\n",
-    "                output = output.unsqueeze(0)\n",
-    "            loss = loss_fn(output, label.to(device))\n",
-    "            outputs.append(torch.softmax(output.detach().cpu(), dim=-1))\n",
-    "            labels.append(label)\n",
-    "            ids.extend(sample[\"id\"])\n",
-    "            agg_loss += loss.item()\n",
-    "    outputs = torch.cat(outputs)\n",
-    "    labels = torch.cat(labels)\n",
-    "    return agg_loss / (i + 1), labels, outputs, ids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# dictionaries to keep eval curve results for each label\n",
-    "tprs = {label: [] for label in Label._member_names_}\n",
-    "aucs = {label: [] for label in Label._member_names_}\n",
-    "precisions = {label: [] for label in Label._member_names_}\n",
-    "aps = {label: [] for label in Label._member_names_}\n",
-    "\n",
-    "# mean x vals and axes for curves\n",
-    "mean_fpr = np.linspace(0, 1, 100)\n",
-    "mean_recall = np.linspace(0, 1, 100)\n",
-    "roc_fig, roc_axs = plt.subplots(2, 2, figsize=(12, 12))\n",
-    "prc_fig, prc_axs = plt.subplots(2, 2, figsize=(12, 12))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Dict\n",
+    "from typing import Dict, List, Tuple\n",
     "\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
@@ -257,18 +216,27 @@
    "outputs": [],
    "source": [
     "import copy\n",
+    "from operator import itemgetter\n",
     "\n",
     "from torch import nn\n",
     "from torch.optim import AdamW\n",
     "\n",
-    "from models.vanilla_attn import VanillaAttentionAggregator\n",
-    "from utils.eval import get_spec_level_probs, plot_eval\n",
+    "from models.agg import MILClassifier\n",
+    "from models.utils.train import train_epoch, val_epoch\n",
+    "from utils.eval import Evaluator, get_spec_level_probs\n",
     "\n",
     "\n",
-    "EPOCHS = 100\n",
+    "EPOCHS = 30\n",
+    "BATCH_SIZE = 16\n",
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
+    "gated = False\n",
+    "heads = 1\n",
+    "model_name = \"chkpts/prism-abmil-1_head-fold-{i}.pt\"\n",
+    "exp_name = \"prism/abmil/ungated/prism-3_hidden\"\n",
+    "\n",
+    "evaluator = Evaluator(Label)\n",
     "\n",
     "for i in range(len(specimens_by_fold)):\n",
     "    print(f\"--------------------FOLD    {i + 1}--------------------\")\n",
@@ -280,9 +248,7 @@
     "        embed_dim = sample[\"tile_embeds\"].shape[-1]\n",
     "        break\n",
     "\n",
-    "    model = VanillaAttentionAggregator(embed_dim, NUM_LABELS, 1, True).to(\n",
-    "        device\n",
-    "    )\n",
+    "    model = MILClassifier(embed_dim, NUM_LABELS, heads, gated).to(device)\n",
     "    loss_fn = nn.CrossEntropyLoss()\n",
     "    optim = AdamW(model.parameters(), lr=1e-5)\n",
     "\n",
@@ -292,7 +258,9 @@
     "    patience = PATIENCE\n",
     "\n",
     "    for epoch in range(EPOCHS):\n",
-    "        train_loss = train_epoch(model, train_loader, optim, loss_fn)\n",
+    "        train_loss = train_epoch(\n",
+    "            model, train_loader, optim, loss_fn, BATCH_SIZE\n",
+    "        )\n",
     "        val_loss, labels, probs, ids = val_epoch(model, val_loader, loss_fn)\n",
     "\n",
     "        if val_loss < best_loss:\n",
@@ -307,7 +275,7 @@
     "            if patience == 0:\n",
     "                break\n",
     "\n",
-    "        if (epoch + 1) % 10 == 0:\n",
+    "        if (epoch + 1) % 2 == 0:\n",
     "            spaces = \" \" * (4 - len(str(epoch + 1)))\n",
     "            print(\n",
     "                f\"--------------------EPOCH{spaces}{epoch + 1}--------------------\"\n",
@@ -319,92 +287,19 @@
     "    # save the best model\n",
     "    torch.save(\n",
     "        best_model_weights,\n",
-    "        os.path.join(OUTPUT_DIR, f\"chkpts/uni-vanil-pool-fold-{i}\"),\n",
+    "        os.path.join(OUTPUT_DIR, model_name.format(i=i)),\n",
     "    )\n",
     "\n",
     "    # extract relevant data from val results for best model\n",
     "    ids, probs = get_spec_level_probs(\n",
     "        best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
     "    )\n",
-    "    labels_onehot_val = labels_onehot.loc[ids]\n",
+    "    labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
     "\n",
-    "    # for each predicted class, plot the current classifier's eval\n",
-    "    # and retain relevant data in dicts\n",
-    "    for j, class_of_interest in enumerate(Label._member_names_):\n",
-    "        interp_tpr, roc_auc = plot_eval(\n",
-    "            mean_x=mean_fpr,\n",
-    "            onehot_labels=labels_onehot_val[f\"{class_of_interest}\"],\n",
-    "            probs=probs[:, Label[class_of_interest].value],\n",
-    "            ax=roc_axs[j // 2][j % 2],\n",
-    "            plot_type=\"ROC\",\n",
-    "            fold_idx=i,\n",
-    "            plot_chance_level=i == len(specimens_by_fold) - 1,\n",
-    "        )\n",
-    "        tprs[class_of_interest].append(interp_tpr)\n",
-    "        aucs[class_of_interest].append(roc_auc)\n",
+    "    evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
     "\n",
-    "        interp_precision, average_precision = plot_eval(\n",
-    "            mean_x=mean_recall,\n",
-    "            onehot_labels=labels_onehot_val[f\"{class_of_interest}\"],\n",
-    "            probs=probs[:, Label[class_of_interest].value],\n",
-    "            ax=prc_axs[j // 2][j % 2],\n",
-    "            plot_type=\"PRC\",\n",
-    "            fold_idx=i,\n",
-    "            plot_chance_level=False,\n",
-    "        )\n",
-    "        precisions[class_of_interest].append(interp_precision)\n",
-    "        aps[class_of_interest].append(average_precision)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.eval import create_mean_curve\n",
-    "\n",
-    "exp_name = \"uni/vanilla/pool/uni-3_hidden\"\n",
-    "\n",
-    "# plot the mean eval curves\n",
-    "for j, class_of_interest in enumerate(Label._member_names_):\n",
-    "    create_mean_curve(\n",
-    "        mean_fpr,\n",
-    "        tprs[class_of_interest],\n",
-    "        aucs[class_of_interest],\n",
-    "        roc_axs[j // 2][j % 2],\n",
-    "        \"ROC\",\n",
-    "        class_of_interest,\n",
-    "    )\n",
-    "\n",
-    "    prc_ax = prc_axs[j // 2][j % 2]\n",
-    "    create_mean_curve(\n",
-    "        mean_recall,\n",
-    "        precisions[class_of_interest],\n",
-    "        aps[class_of_interest],\n",
-    "        prc_ax,\n",
-    "        \"PRC\",\n",
-    "        class_of_interest,\n",
-    "    )\n",
-    "\n",
-    "    # add chance line for PRC == label freq at specimen level\n",
-    "    prc_ax.axhline(\n",
-    "        spec_freqs[class_of_interest],\n",
-    "        linestyle=\"--\",\n",
-    "        label=r\"Chance level (AP = %0.2f)\" % (spec_freqs[class_of_interest]),\n",
-    "        color=\"black\",\n",
-    "    )\n",
-    "\n",
-    "    # reorder legend\n",
-    "    handles, labs = prc_ax.get_legend_handles_labels()\n",
-    "    handles[-1], handles[-3] = handles[-3], handles[-1]\n",
-    "    labs[-1], labs[-3] = labs[-3], labs[-1]\n",
-    "    prc_ax.legend(handles=handles, labels=labs, loc=\"lower right\")\n",
-    "\n",
-    "# roc_fig.show()\n",
-    "roc_fig.savefig(f\"outputs/{exp_name}-roc.png\")\n",
-    "# prc_fig.show()\n",
-    "prc_fig.savefig(f\"outputs/{exp_name}-prc.png\")"
+    "evaluator.finalize(class_freqs)\n",
+    "evaluator.save_figs(exp_name)"
    ]
   }
  ],
