--- a/notebooks/Pos_Embed_Comparison.ipynb
+++ b/notebooks/Pos_Embed_Comparison.ipynb
@@ -131,7 +131,8 @@
    "source": [
     "import pickle\n",
     "\n",
-    "with open(tile_embed_paths[0], \"rb\") as f:\n",
+    "idx = np.random.randint(0, len(tile_embed_paths) - 1)\n",
+    "with open(tile_embed_paths[idx], \"rb\") as f:\n",
     "    embeds = pickle.load(f)"
    ]
   },
