Improve notebooks for consistency

--- a/notebooks/Aggregate_And_Classify.ipynb
+++ b/notebooks/Aggregate_And_Classify.ipynb
@@ -57,56 +57,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get the absolute path for each slide's set of tile embeddings\n",
-    "# tile_embed_dir = \"/opt/gpudata/skin-cancer/outputs/prism/tile_embeddings\"\n",
-    "# fnames = os.listdir(tile_embed_dir)\n",
-    "# tile_embed_paths = [\n",
-    "#     os.path.join(tile_embed_dir, fname)\n",
-    "#     for fname in fnames\n",
-    "#     if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
-    "# ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from utils.tile_embed_postproc import postproc_pkl\n",
+    "foundation_model = \"prism\"\n",
     "\n",
-    "# postproc_pkl(tile_embed_dir, tile_embed_dir + \"_sorted\", 256)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tile_embed_dir = (\n",
-    "    \"/opt/gpudata/skin-cancer/outputs/prism/tile_embeddings_sorted\"\n",
-    ")\n",
+    "# get the absolute path for each slide's set of tile embeddings\n",
+    "tile_embed_dir = f\"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\"\n",
     "fnames = os.listdir(tile_embed_dir)\n",
     "tile_embed_paths = [\n",
     "    os.path.join(tile_embed_dir, fname)\n",
     "    for fname in fnames\n",
     "    if fname.endswith(\".pkl\") and fname[:6] in set(df.index)\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pickle\n",
-    "\n",
-    "# with open(tile_embed_paths[0], \"rb\") as f:\n",
-    "#     data = pickle.load(f)\n",
-    "\n",
-    "# data"
    ]
   },
   {
@@ -231,75 +191,96 @@
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
-    "gated = False\n",
-    "heads = 1\n",
-    "model_name = \"chkpts/prism-abmil-1_head-fold-{i}.pt\"\n",
-    "exp_name = \"prism/abmil/ungated/prism-3_hidden\"\n",
+    "gates = [False, False, True, True]\n",
+    "head_counts = [1, 8, 1, 8]\n",
     "\n",
-    "evaluator = Evaluator(Label)\n",
-    "\n",
-    "for i in range(len(specimens_by_fold)):\n",
-    "    print(f\"--------------------FOLD    {i + 1}--------------------\")\n",
-    "    # get dataloaders and embed dims for loaded embeddings\n",
-    "    train_loader, val_loader = get_loaders(\n",
-    "        i, specimens_by_fold, slides_by_specimen, labels_dict\n",
+    "for exp_idx in range(len(gates)):\n",
+    "    # set experiment-specific variables\n",
+    "    gated = gates[exp_idx]\n",
+    "    heads = head_counts[exp_idx]\n",
+    "    aggregator = \"gabmil\" if gated else \"abmil\"\n",
+    "    save_directory = \"gated\" if gated else \"ungated\"\n",
+    "    model_name = (\n",
+    "        \"chkpts/{foundation_model}-{aggregator}-{heads}_heads-fold-{i}.pt\"\n",
     "    )\n",
-    "    for sample in train_loader:\n",
-    "        embed_dim = sample[\"tile_embeds\"].shape[-1]\n",
-    "        break\n",
+    "    exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
     "\n",
-    "    model = MILClassifier(embed_dim, NUM_LABELS, heads, gated).to(device)\n",
-    "    loss_fn = nn.CrossEntropyLoss()\n",
-    "    optim = AdamW(model.parameters(), lr=1e-5)\n",
+    "    evaluator = Evaluator(Label)\n",
     "\n",
-    "    best_loss = float(\"inf\")\n",
-    "    best_model_weights = None\n",
-    "    best_model_data = {\"ids\": None, \"labels\": None, \"probs\": None}\n",
-    "    patience = PATIENCE\n",
-    "\n",
-    "    for epoch in range(EPOCHS):\n",
-    "        train_loss = train_epoch(\n",
-    "            model, train_loader, optim, loss_fn, BATCH_SIZE\n",
+    "    # for each fold, train and validate while saving the best models\n",
+    "    # then evaluate the final outputs by generating curves using Evaluator\n",
+    "    for i in range(len(specimens_by_fold)):\n",
+    "        print(f\"--------------------FOLD    {i + 1}--------------------\")\n",
+    "        # get dataloaders and embed dims for loaded embeddings\n",
+    "        train_loader, val_loader = get_loaders(\n",
+    "            i, specimens_by_fold, slides_by_specimen, labels_dict\n",
     "        )\n",
-    "        val_loss, labels, probs, ids = val_epoch(model, val_loader, loss_fn)\n",
+    "        for sample in train_loader:\n",
+    "            embed_dim = sample[\"tile_embeds\"].shape[-1]\n",
+    "            break\n",
     "\n",
-    "        if val_loss < best_loss:\n",
-    "            best_loss = val_loss\n",
-    "            best_model_weights = copy.deepcopy(model.state_dict())\n",
-    "            best_model_data[\"ids\"] = ids\n",
-    "            best_model_data[\"labels\"] = labels\n",
-    "            best_model_data[\"probs\"] = probs\n",
-    "            patience = PATIENCE\n",
-    "        else:\n",
-    "            patience -= 1\n",
-    "            if patience == 0:\n",
-    "                break\n",
+    "        model = MILClassifier(embed_dim, NUM_LABELS, heads, gated).to(device)\n",
+    "        loss_fn = nn.CrossEntropyLoss()\n",
+    "        optim = AdamW(model.parameters(), lr=1e-5)\n",
     "\n",
-    "        if (epoch + 1) % 2 == 0:\n",
-    "            spaces = \" \" * (4 - len(str(epoch + 1)))\n",
-    "            print(\n",
-    "                f\"--------------------EPOCH{spaces}{epoch + 1}--------------------\"\n",
+    "        best_loss = float(\"inf\")\n",
+    "        best_model_weights = None\n",
+    "        best_model_data = {\"ids\": None, \"labels\": None, \"probs\": None}\n",
+    "        patience = PATIENCE\n",
+    "\n",
+    "        for epoch in range(EPOCHS):\n",
+    "            train_loss = train_epoch(\n",
+    "                model, train_loader, optim, loss_fn, BATCH_SIZE, device\n",
     "            )\n",
-    "            print(f\"train loss: {train_loss:0.6f}\")\n",
-    "            print(f\"val loss:   {val_loss:0.6f}\")\n",
-    "            print()\n",
+    "            val_loss, labels, probs, ids = val_epoch(\n",
+    "                model, val_loader, loss_fn, device\n",
+    "            )\n",
     "\n",
-    "    # save the best model\n",
-    "    torch.save(\n",
-    "        best_model_weights,\n",
-    "        os.path.join(OUTPUT_DIR, model_name.format(i=i)),\n",
-    "    )\n",
+    "            if val_loss < best_loss:\n",
+    "                best_loss = val_loss\n",
+    "                best_model_weights = copy.deepcopy(model.state_dict())\n",
+    "                best_model_data[\"ids\"] = ids\n",
+    "                best_model_data[\"labels\"] = labels\n",
+    "                best_model_data[\"probs\"] = probs\n",
+    "                patience = PATIENCE\n",
+    "            else:\n",
+    "                patience -= 1\n",
+    "                if patience == 0:\n",
+    "                    break\n",
     "\n",
-    "    # extract relevant data from val results for best model\n",
-    "    ids, probs = get_spec_level_probs(\n",
-    "        best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
-    "    )\n",
-    "    labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
+    "            if (epoch + 1) % 2 == 0:\n",
+    "                spaces = \" \" * (4 - len(str(epoch + 1)))\n",
+    "                print(\n",
+    "                    f\"--------------------EPOCH{spaces}{epoch + 1}--------------------\"\n",
+    "                )\n",
+    "                print(f\"train loss: {train_loss:0.6f}\")\n",
+    "                print(f\"val loss:   {val_loss:0.6f}\")\n",
+    "                print()\n",
     "\n",
-    "    evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
+    "        # save the best model\n",
+    "        torch.save(\n",
+    "            best_model_weights,\n",
+    "            os.path.join(\n",
+    "                OUTPUT_DIR,\n",
+    "                model_name.format(\n",
+    "                    foundation_model=foundation_model,\n",
+    "                    aggregator=aggregator,\n",
+    "                    heads=heads,\n",
+    "                    i=i,\n",
+    "                ),\n",
+    "            ),\n",
+    "        )\n",
     "\n",
-    "evaluator.finalize(class_freqs)\n",
-    "evaluator.save_figs(exp_name)"
+    "        # extract relevant data from val results for best model\n",
+    "        ids, probs = get_spec_level_probs(\n",
+    "            best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
+    "        )\n",
+    "        labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
+    "\n",
+    "        evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
+    "\n",
+    "    evaluator.finalize(class_freqs)\n",
+    "    evaluator.save_figs(exp_name)"
    ]
   }
  ],
