--- a/notebooks/Classify_Slides.ipynb
+++ b/notebooks/Classify_Slides.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "embedding_path = os.path.join(\n",
-    "    OUTPUT_DIR, \"prism/slide_embeddings/prism_slide_embeds.pkl\"\n",
+    "    OUTPUT_DIR, \"gigapath/slide_embeddings/gigapath_slide_embeds_GAP.pkl\"\n",
     ")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
@@ -84,14 +84,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
+    "auprc_keys = [k + \"_auprc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
     "\n",
     "from utils.split import train_val_split\n",
     "from utils.eval import Evaluator, get_spec_level_probs\n",
     "\n",
     "\n",
-    "def crossval(clf, folds: list, y_onehot: pd.DataFrame, exp_name: str):\n",
+    "def crossval(\n",
+    "    clf,\n",
+    "    folds: list,\n",
+    "    y_onehot: pd.DataFrame,\n",
+    "    exp_name: str,\n",
+    "    foundation_model: str,\n",
+    "    aggregator_model: str,\n",
+    "    classifier_model: str,\n",
+    ") -> pd.DataFrame:\n",
     "    evaluator = Evaluator(Label)\n",
+    "    results = pd.DataFrame(\n",
+    "        columns=[\"foundation_model\", \"aggregator\", \"classifier\", \"fold\"]\n",
+    "        + auroc_keys\n",
+    "        + auprc_keys\n",
+    "    )\n",
     "\n",
     "    for i, val_fold_indices in enumerate(folds):\n",
     "        # fit the classifier on the train data and extract probs\n",
@@ -113,8 +137,28 @@
     "\n",
     "        evaluator.fold(probs, y_onehot_val, i, len(folds))\n",
     "\n",
+    "        auroc = roc_auc_score(\n",
+    "            y_onehot_val, probs, average=None, multi_class=\"ovr\"\n",
+    "        )\n",
+    "        auroc_dict = {auroc_keys[i]: v for i, v in enumerate(auroc)}\n",
+    "\n",
+    "        auprc = average_precision_score(y_onehot_val, probs, average=None)\n",
+    "        auprc_dict = {auprc_keys[i]: v for i, v in enumerate(auprc)}\n",
+    "\n",
+    "        model_details = {}\n",
+    "        model_details[\"foundation_model\"] = foundation_model\n",
+    "        model_details[\"aggregator\"] = aggregator_model\n",
+    "        model_details[\"classifier\"] = classifier_model\n",
+    "        model_details[\"fold\"] = i\n",
+    "        model_details = model_details | auroc_dict | auprc_dict\n",
+    "        details_df = pd.Series(model_details)\n",
+    "        results = pd.concat(\n",
+    "            [results, details_df.to_frame().T], ignore_index=True\n",
+    "        )\n",
+    "\n",
     "    evaluator.finalize(spec_freqs)\n",
-    "    evaluator.save_figs(exp_name)"
+    "    evaluator.save_figs(exp_name)\n",
+    "    return results"
    ]
   },
   {
@@ -135,7 +179,15 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "clf = XGBClassifier(objective=\"multi:softmax\", num_class=4)\n",
-    "crossval(clf, slide_folds, y_onehot, \"prism/perceiver/prism-xgb\")"
+    "xgb = crossval(\n",
+    "    clf,\n",
+    "    slide_folds,\n",
+    "    y_onehot,\n",
+    "    \"gigapath/global_pooling/gigapath-xgb\",\n",
+    "    \"gigapath\",\n",
+    "    \"GAP\",\n",
+    "    \"xgb\",\n",
+    ")"
    ]
   },
   {
@@ -147,7 +199,15 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "clf = LogisticRegression(max_iter=1000, solver=\"saga\")\n",
-    "crossval(clf, slide_folds, y_onehot, \"prism/perceiver/prism-lr\")"
+    "lr = crossval(\n",
+    "    clf,\n",
+    "    slide_folds,\n",
+    "    y_onehot,\n",
+    "    \"gigapath/global_pooling/gigapath-lr\",\n",
+    "    \"gigapath\",\n",
+    "    \"GAP\",\n",
+    "    \"lr\",\n",
+    ")"
    ]
   },
   {
@@ -156,11 +216,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import SGDClassifier\n",
+    "# from sklearn.linear_model import SGDClassifier\n",
     "\n",
-    "clf = SGDClassifier(loss=\"log_loss\")\n",
+    "# clf = SGDClassifier(loss=\"log_loss\")\n",
     "\n",
-    "crossval(clf, slide_folds, y_onehot, \"prism/perceiver/prism-sgd_lr\")"
+    "# crossval(clf, slide_folds, y_onehot, \"prism/global_pooling/prism-sgd_lr\", \"prism\", \"GAP\", \"lr-sgd\")"
    ]
   },
   {
@@ -168,7 +228,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_results = pd.concat((xgb, lr), ignore_index=True)\n",
+    "final_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_results.to_csv(\"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\")"
+   ]
   }
  ],
  "metadata": {
